--- a/public/style.css
+++ b/public/style.css
@@ -8,12 +8,6 @@
     #table_left {
        width: 100% !important;
     }
-	#group_chat input {
-		width: 78% !important;
-	}
-	#tools {
-		width: 25px !important;
-	}
 	#login-container {
 		width: 100%;
 		padding: 0 14px;
@@ -65,12 +59,12 @@ body {  font-family: "Roboto", sans-serif; font-size: 14px; line-height: 1.5em}
 #table_left td {vertical-align: 0;}
 
 #group_chat { background: #000; padding: 3px; width: 100%; }
-#group_chat input { border: 0; padding: 10px; width: 80%; margin-right: .5%; }
+#group_chat input { border: 0; padding: 10px; width: 85%; margin-right: .5%; }
 #group_chat button { width: 14%; background: rgb(130, 224, 255); border: none; padding: 10px; margin-left: .3%;}
 
 
-#tools { list-style-type: none; margin: 0; padding: 0; width: 5%; float: right;}
-#tools li i {font-size: 30px; line-height: 36px; cursor: pointer; margin-left: 3px;} 
+#tools { list-style-type: none; margin: 0; padding: 0; width: 5%;}
+#tools li i {font-size: 25px; line-height: 36px; cursor: pointer; margin-left: 3px;} 
 #tools #file_uploader {display: none}
 #upload_token {color: #fff;}
 
